<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="editMemoryViewModel"
            type="com.example.bambino.editmemory.EditMemoryViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".memoentry.MemoryEntryFragment">

        <ImageView
            android:id="@+id/new_memory_photo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="#959595"
            android:clickable="true"
            android:contentDescription="@string/click_to_change_photo"
            android:focusable="true"
            android:src="@drawable/ic_baseline_photo_24"
            android:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/memory_date_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_memory_photo"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:clickable="false"
            android:hint="@string/date"
            android:inputType="date"
            app:endIconContentDescription="Choose date from the calendar"
            app:endIconDrawable="@drawable/ic_baseline_calendar_month_24"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_input_to_click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/memory_description_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/memory_date_text_input"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:endIconContentDescription="Clear text"
            app:endIconDrawable="@drawable/ic_baseline_cancel_24"
            app:endIconMode="clear_text"

            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/memo_description_here"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:hint="@string/description"
                android:inputType="textMultiLine"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/remove_memory_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/memory_description_text_input"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{()->editMemoryViewModel.onDelete()}"
            android:text="@string/delete" />

        <Button
            android:id="@+id/confirm_edit_memory_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/remove_memory_button"
            android:layout_alignBottom="@id/remove_memory_button"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="16dp"
            android:text="@string/confirm" />

    </RelativeLayout>
</layout>