<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="memoriesViewModel"
            type="com.example.bambino.memories.MemoriesViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/memoriesFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".memories.MemoriesFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/memories_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:scrollbars="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/button_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_memory_entry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                android:contentDescription="@string/add_new_memory"
                android:onClick="@{()->memoriesViewModel.onNewMemory()}"
                android:onLongClick="@{()->memoriesViewModel.clear()}"
                app:srcCompat="@drawable/ic_baseline_add_24" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </RelativeLayout>
</layout>
