...
        android:id="@+id/trackFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".track.TrackFragment">

        <TextView
            android:id="@+id/chosen_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@{trackViewModel.currentDayStr}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
...

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_activity_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                android:contentDescription="@string/add_new_action"
                android:onClick="@{()->trackViewModel.onNewAction()}"
...
